// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default render 1`] = `
<div>
  <div
    class="MuiBox-root css-7lmw8c"
  >
    <div
      class="MuiBox-root css-198xhax"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1o05ccb-MuiSvgIcon-root"
        data-testid="AccountBalanceWalletIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M21 18v1c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2V5c0-1.1.89-2 2-2h14c1.1 0 2 .9 2 2v1h-9c-1.11 0-2 .9-2 2v8c0 1.1.89 2 2 2h9zm-9-2h10V8H12v8zm4-2.5c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5z"
        />
      </svg>
      <div
        class="MuiBox-root css-x1k79c"
      >
        <span
          class="first-line"
        >
          Not connected
        </span>
        <span
          class="second-line"
        >
          Connect Wallet
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render with address 1`] = `
<div>
  <div
    class="MuiBox-root css-7lmw8c"
  >
    <div
      class="MuiBox-root css-198xhax"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1o05ccb-MuiSvgIcon-root"
        data-testid="AccountBalanceWalletIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M21 18v1c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2V5c0-1.1.89-2 2-2h14c1.1 0 2 .9 2 2v1h-9c-1.11 0-2 .9-2 2v8c0 1.1.89 2 2 2h9zm-9-2h10V8H12v8zm4-2.5c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5z"
        />
      </svg>
      <div
        class="MuiBox-root css-x1k79c"
      >
        <span
          class="first-line"
        >
          SP3XD...KAEK7
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render with bns 1`] = `
<div>
  <div
    class="MuiBox-root css-7lmw8c"
  >
    <div
      class="MuiBox-root css-198xhax"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1o05ccb-MuiSvgIcon-root"
        data-testid="AccountBalanceWalletIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M21 18v1c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2V5c0-1.1.89-2 2-2h14c1.1 0 2 .9 2 2v1h-9c-1.11 0-2 .9-2 2v8c0 1.1.89 2 2 2h9zm-9-2h10V8H12v8zm4-2.5c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5z"
        />
      </svg>
      <div
        class="MuiBox-root css-x1k79c"
      >
        <span
          class="first-line"
        >
          SP3XD...KAEK7
        </span>
        <span
          class="second-line"
        >
          tbb.btc
        </span>
      </div>
    </div>
  </div>
</div>
`;
